Fix wrapping on long activity text

--- a/src/views/studio/studio.scss
+++ b/src/views/studio/studio.scss
@@ -247,6 +247,13 @@ $radius: 8px;
     .studio-activity-icon {
         opacity: 1;
     }
+    /* Ensure that line breaks occur only the message text, not in the flex layout or date */
+    .social-message-date {
+        white-space: nowrap;
+    }
+    .flex-row.mod-social-message {
+        flex-wrap: nowrap;
+    }
 }
 
 /* Modification classes for different interaction states */
